Add baseline selection infrastructure to ProbabilisticTestExtension
Changes:
- Add findUseCaseProvider() method to locate UseCaseProvider in test
- Pass ExtensionContext to loadBaselineWithCovariateSelection()
- Resolve covariate profile with use case instance from provider
- Add logSelectedBaseline() to output the selected baseline filename
- CovariateDeclaration: Use LinkedHashMap to preserve custom covariate order

Note: @CovariateSource methods on use case instances cannot be invoked
during baseline selection because baseline selection happens in
provideTestTemplateInvocationContexts(), which runs BEFORE @BeforeEach
where use cases are typically created. For CONFIGURATION covariates in
tests, use system properties or environment variables instead.

This infrastructure lays the groundwork for full @CovariateSource support
when the architectural timing issue is addressed.